@@ -44,22 +44,6 @@
 #include "e-util.h"
 #include "e-xml-utils.h"
 
-xmlNode *
-e_xml_get_child_by_name (const xmlNode *parent, const xmlChar *child_name)
-{
-	xmlNode *child;
-
-	g_return_val_if_fail (parent != NULL, NULL);
-	g_return_val_if_fail (child_name != NULL, NULL);
-	
-	for (child = parent->xmlChildrenNode; child != NULL; child = child->next) {
-		if (xmlStrcmp (child->name, child_name) == 0) {
-			return child;
-		}
-	}
-	return NULL;
-}
-
 /* Returns the first child with the name child_name and the "lang"
  * attribute that matches the current LC_MESSAGES, or else, the first
  * child with the name child_name and no "lang" attribute.
@@ -448,79 +432,3 @@ e_xml_get_translated_string_prop_by_name (const xmlNode *parent, const xmlChar *
 	return ret_val;
 }
 
-
-int
-e_xml_save_file (const char *filename, xmlDocPtr doc)
-{
-	char *filesave, *xmlbuf;
-	size_t n, written = 0;
-	int ret, fd, size;
-	int errnosave;
-	ssize_t w;
-	
-	{
-		gchar *dirname = g_path_get_dirname (filename);
-		gchar *basename = g_path_get_basename (filename);
-		gchar *savebasename = g_strconcat (".#", basename, NULL);
-
-		g_free (basename);
-		filesave = g_build_filename (dirname, savebasename, NULL);
-		g_free (savebasename);
-		g_free (dirname);
-	}
-	
-	fd = g_open (filesave, O_WRONLY | O_CREAT | O_TRUNC, 0600);
-	if (fd == -1) {
-		g_free (filesave);
-		return -1;
-	}
-	
-	xmlDocDumpFormatMemory (doc, (xmlChar **) &xmlbuf, &size, TRUE);
-	if (size <= 0) {
-		close (fd);
-		g_unlink (filesave);
-		g_free (filesave);
-		errno = ENOMEM;
-		return -1;
-	}
-	
-	n = (size_t) size;
-	do {
-		do {
-			w = write (fd, xmlbuf + written, n - written);
-		} while (w == -1 && errno == EINTR);
-		
-		if (w > 0)
-			written += w;
-	} while (w != -1 && written < n);
-	
-	xmlFree (xmlbuf);
-	
-	if (written < n || fsync (fd) == -1) {
-		errnosave = errno;
-		close (fd);
-		g_unlink (filesave);
-		g_free (filesave);
-		errno = errnosave;
-		return -1;
-	}
-	
-	while ((ret = close (fd)) == -1 && errno == EINTR)
-		;
-	
-	if (ret == -1) {
-		g_free (filesave);
-		return -1;
-	}
-	
-	if (g_rename (filesave, filename) == -1) {
-		errnosave = errno;
-		g_unlink (filesave);
-		g_free (filesave);
-		errno = errnosave;
-		return -1;
-	}
-	g_free (filesave);
-	
-	return 0;
-}
